<resources>
    <string name="app_name">FoodyAppStefan2023</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipes">Recipes</string>
    <string name="favorites">Favorites</string>
    <string name="food_joke">Food Joke</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="sad_icon">sad icon</string>
    <string name="more_recipes">More recipes</string>
    <string name="recipe_image">recipe image</string>
    <string name="loremp_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="meal_type">Meal Type</string>
    <string name="main_course">main course</string>
    <string name="side_dish">side dish</string>
    <string name="dessert">dessert</string>
    <string name="appetizer">appetizer</string>
    <string name="salad">salad</string>
    <string name="bread">bread</string>
    <string name="breakfast">breakfast</string>
    <string name="soup">soup</string>
    <string name="beverage">beverage</string>
    <string name="sauce">sauce</string>
    <string name="snack">snack</string>
    <string name="fingerfood">fingerfood</string>
    <string name="drink">drink</string>
    <string name="diet_type">Diet Type</string>
    <string name="gluten_free">Gluten Free</string>
    <string name="ketogenic">Ketogenic</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="vegan">Vegan</string>
    <string name="paleo">Paleo</string>
    <string name="primal">Primal</string>
    <string name="apply">Apply</string>
</resources>