<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/receipesFragment">

    <fragment
        android:id="@+id/receipesFragment"
        android:name="com.example.foodyappstefan2023.ui.fragments.recipe.RecipesFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_receipes" >
        <action
            android:id="@+id/action_receipesFragment_to_recipeBottomSheet"
            app:destination="@id/recipeBottomSheet" />
    </fragment>
    <fragment
        android:id="@+id/favoritesReceipes"
        android:name="com.example.foodyappstefan2023.ui.fragments.favorites.FavoritesRecipesFragment"
        android:label="@string/favorites"
        tools:layout="@layout/fragment_favorites_receipes" />
    <fragment
        android:id="@+id/foodJokeFragment"
        android:name="com.example.foodyappstefan2023.ui.fragments.foodjoke.FoodJokeFragment"
        android:label="@string/food_joke"
        tools:layout="@layout/fragment_food_joke" />
    <dialog
        android:id="@+id/recipeBottomSheet"
        android:name="com.example.foodyappstefan2023.ui.fragments.recipe.bottomsheet.RecipeBottomSheet"
        android:label="recipe_bottom_sheet"
        tools:layout="@layout/recipe_bottom_sheet" >
        <action
            android:id="@+id/action_recipeBottomSheet_to_receipesFragment"
            app:destination="@id/receipesFragment" />
    </dialog>
</navigation>